make single blog responsive

--- a/blog-single.html
+++ b/blog-single.html
@@ -438,16 +438,14 @@
 
 
     <!-- content -->
-    <div class="max-width-container mx-auto mt-5">
+    <div class="max-width-blog-container mx-auto mt-5">
         <div class="row">
-            <div class="cat-blog-box bg-white fs13 fw-600 w-fit">
-                عنوان دسته بندی
-            </div>
-
-        </div>
-        <div class="row mt-3">
-            <div class="col-8">
-                <h1 class="fw-800 main-single-title">
+            <div class="col-12 col-lg-10 col-xl-8">
+                <div class="cat-blog-box bg-white fs13 fw-600 w-fit">
+                    عنوان دسته بندی
+                </div>
+                <h1 class="fw-800 main-single-title  mt-3">
+                    عنوان اصلی مطلب برای نمایش
                     اهمیت ویتامین D: منابع غذایی در مقابل مکمل‌ها
                 </h1>
             </div>
@@ -473,15 +471,14 @@
         </div>
 
         <div class="row">
-            <img src="images/blogs/blog_17-1400x760.jpg" class="w-100 mt-4 br-20 object-fit-cover main-sinle-img"
-                alt="">
+            <img src="images/blogs/blog_17-1400x760.jpg" class="w-100 mt-4 object-fit-cover main-sinle-img" alt="">
         </div>
 
 
     </div>
 
-    <div class="container px-5">
-        <div class="row px-5">
+    <div class="container-md px-lg-5">
+        <div class="row px-lg-5">
             <div class="row mt-4 content-single-editor">
                 <div class="">
                     <p>
@@ -574,7 +571,7 @@
             </div>
         </div>
 
-        <div class="row px-5 mt-5">
+        <div class="row px-lg-5 mt-5">
             <div class="border-top border-bottom py-4 fs17">
                 <div>
                     <svg class="ms-2" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
@@ -612,8 +609,8 @@
             </div>
         </div>
 
-        <div class="row px-5 mt-5 justify-content-between pb-5">
-            <div class="col-4">
+        <div class="row px-lg-5 mt-5 justify-content-between pb-5">
+            <div class="col-8 col-lg-4">
                 <div class="d-flex align-items-center ">
                     <img src="images/blogs/blog_18-1060x600.jpg" width="100" height="100"
                         class="rounded object-fit-cover" alt="">
@@ -638,7 +635,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 d-lg-none"></div>
+            <div class="col-4 d-lg-none"></div>
+            <div class="col-8 col-lg-4 mt-5 mt-lg-0">
                 <a href="">
                     <div class="d-flex align-items-center">
 
@@ -668,17 +667,17 @@
         </div>
 
 
-        <div class="row px-5 mt-4">
+        <div class="row px-lg-5 mt-4">
             <div class="border-top pt-4 commt-head fw-800">
                 3 دیدگاه
             </div>
 
             <div class="d-flex mt-4">
                 <div>
-                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg" class="rounded-circle object-fit-cover"
-                        width="70" height="70" alt="">
+                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg"
+                        class="rounded-circle object-fit-cover d-none d-lg-block" width="70" height="70" alt="">
                 </div>
-                <div class="comment-box p-4 w-100 me-4 br-20 position-relative">
+                <div class="comment-box p-4 w-100 me-lg-4 br-20 position-relative">
                     <div class="position-absolute right-arrow-shape">
 
                     </div>
@@ -713,10 +712,10 @@
             </div>
             <div class="d-flex mt-4 pe-5">
                 <div>
-                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg" class="rounded-circle object-fit-cover"
-                        width="70" height="70" alt="">
+                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg"
+                        class="rounded-circle object-fit-cover d-none d-lg-block" width="70" height="70" alt="">
                 </div>
-                <div class="comment-box p-4 w-100 me-4 br-20 position-relative">
+                <div class="comment-box p-4 w-100 me-lg-4 br-20 position-relative">
                     <div class="position-absolute right-arrow-shape">
 
                     </div>
@@ -751,10 +750,10 @@
             </div>
             <div class="d-flex mt-4">
                 <div>
-                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg" class="rounded-circle object-fit-cover"
-                        width="70" height="70" alt="">
+                    <img src="images/user/64e1b8d34f425d19e1ee2ea7236d3028.jpg"
+                        class="rounded-circle object-fit-cover d-none d-lg-block" width="70" height="70" alt="">
                 </div>
-                <div class="comment-box p-4 w-100 me-4 br-20 position-relative">
+                <div class="comment-box p-4 w-100 me-lg-4 br-20 position-relative">
                     <div class="position-absolute right-arrow-shape">
 
                     </div>
@@ -796,13 +795,13 @@
             </div>
 
             <div class="row mt-5">
-                <div class="col-4">
+                <div class="col-12 col-lg-4 mt-3 mt-lg-0">
                     <input type="text" class="base-inp w-100 px-4" placeholder="نام *">
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4 mt-3 mt-lg-0">
                     <input type="text" class="base-inp w-100 px-4" placeholder="ایمیل *">
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-lg-4 mt-3 mt-lg-0">
                     <input type="text" class="base-inp w-100 px-4" placeholder="وبسایت *">
                 </div>
                 <div class="col-12 mt-4">
