make contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -435,10 +435,10 @@
 
 
     <!-- contact -->
-    <div class="max-width-blog-container mx-auto mt-5">
+    <div class="max-width-blog-container mx-auto mt-5 pt-lg-3">
         <div class="row">
-            <div class="col-3 border-start">
-                <div class="d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 py-4 border-start border-bottom border-bottom-md-0">
+                <div class="d-lg-flex justify-content-center text-center">
                     <svg class="c-sec-2-color" stroke="currentColor" fill="none" stroke-width="1" viewBox="0 0 24 24"
                         aria-hidden="true" height="35" width="35" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -473,8 +473,8 @@
 
 
             </div>
-            <div class="col-3 border-start">
-                <div class="d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 py-4 border-start border-bottom border-bottom-md-0">
+                <div class="d-lg-flex justify-content-center text-center">
                     <svg class="c-sec-2-color" stroke="currentColor" fill="currentColor" stroke-width="0"
                         viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
                         <g id="Clock_1">
@@ -505,8 +505,8 @@
 
 
             </div>
-            <div class="col-3 border-start">
-                <div class="d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 py-4 border-start border-bottom border-bottom-md-0">
+                <div class="d-lg-flex justify-content-center text-center">
                     <svg class="c-sec-2-color" stroke="currentColor" fill="currentColor" stroke-width="0"
                         viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
                         <g id="Location_On">
@@ -544,8 +544,8 @@
 
 
             </div>
-            <div class="col-3">
-                <div class="d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 py-4">
+                <div class="d-lg-flex justify-content-center text-center">
                     <svg class="c-sec-2-color" stroke="currentColor" fill="currentColor" stroke-width="0"
                         viewBox="0 0 24 24" height="35" width="35" xmlns="http://www.w3.org/2000/svg">
                         <g id="Shop">
@@ -597,7 +597,7 @@
             ارسال کنید
         </div>
         <div class="row justify-content-center">
-            <div class="col-6 text-center">
+            <div class="col-12 col-lg-6 text-center">
                 <div class="c-sec-2-color lh-2 px-5">
                     برای اطلاعات بیشتر و نحوه پاسخگویی به نیازهای شما، لطفاً فرم زیر را پر کنید، یکی از اعضای تیم ما با
                     شما تماس
@@ -608,18 +608,18 @@
     </div>
 
 
-    <div class="container mx-auto">
+    <div class="container-md mx-auto">
         <div class="row justify-content-center">
-            <div class="col-4 mt-4">
+            <div class="col-12 col-lg-4 mt-4">
                 <input type="text" class="base-inp w-100 px-3" placeholder="نام شما *">
             </div>
-            <div class="col-4 mt-4">
+            <div class="col-12 col-lg-4 mt-4">
                 <input type="text" class="base-inp w-100 px-3" placeholder="شماره تلفن  *">
             </div>
-            <div class="col-8 mt-4">
+            <div class="col-12 col-lg-8 mt-4">
                 <input type="email" class="base-inp w-100 px-3" placeholder="ایمیل   *">
             </div>
-            <div class="col-8 mt-4">
+            <div class="col-12 col-lg-8 mt-4">
                 <textarea name="" class="textarea-inp w-100 p-4" id=""></textarea>
                 <div class="text-center">
                     <button class="mt-4 cat-btn w-fit px-5">ارسال </button>
