make faq page responsive

--- a/faq.html
+++ b/faq.html
@@ -448,7 +448,7 @@
 
     <div class="max-width-blog-container mx-auto mt-5">
         <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-12 col-lg-8">
                 <div class="accordion " id="faqAccordion">
 
                     <!-- FAQ 1 -->
@@ -518,12 +518,12 @@
                 </div>
 
             </div>
-            
+
         </div>
     </div>
 
 
-     <div class="max-width-blog-container mx-auto mt-5 pt-4">
+    <div class="max-width-blog-container mx-auto mt-5 pt-4">
         <div class="row">
             <div class="text-center fw-800 faq-text">
                 حمل و نقل و برگشت
@@ -535,9 +535,9 @@
         </div>
     </div>
 
-<div class="max-width-blog-container mx-auto mt-5">
+    <div class="max-width-blog-container mx-auto mt-5">
         <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-12 col-lg-8">
                 <div class="accordion " id="faqAccordion">
 
                     <!-- FAQ 1 -->
@@ -607,10 +607,10 @@
                 </div>
 
             </div>
-            
+
         </div>
     </div>
-  
+
 
     <!-- footer -->
     <div class="pt-5"></div>
