make about us page responsive

--- a/about-us.html
+++ b/about-us.html
@@ -413,7 +413,7 @@
     </header>
 
     <!-- about header -->
-    <div class="max-width-container mx-auto about-header">
+    <div class="max-width-blog-container mx-auto about-header">
         <div class="d-flex align-items-center justify-content-center text-white position-relative content w-100 h-100">
             <div class="text-center">
                 <div class="fw-600">
@@ -430,9 +430,9 @@
     </div>
 
 
-    <div class="container mx-auto mt-5 pt-4">
+    <div class="container-md mx-auto mt-5 pt-lg-4 px-3 px-md-0">
         <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-12 col-lg-8">
                 <div class="supp-txt fw-800">
 
 
@@ -474,7 +474,7 @@
 
 
                 <div class="row border-top mt-5">
-                    <div class="col-6 text-center pt-5">
+                    <div class="col-12 col-lg-6 text-center pt-5">
                         <div class="fw-800 count-txt text-green" dir="ltr">
                             185K+
                         </div>
@@ -482,7 +482,7 @@
                             بطری های فروخته شده در سال گذشته
                         </div>
                     </div>
-                    <div class="col-6 text-center border-end pt-5">
+                    <div class="col-12 col-lg-6 text-center border-end pt-5">
                         <div class="fw-800 count-txt text-green" dir="ltr">
                             25+
                         </div>
@@ -504,7 +504,7 @@
 
 
     <!-- video -->
-    <div class="max-width-container mx-auto mt-5 pt-5 image-vido-wapper">
+    <div class="max-width-blog-container mx-auto mt-5 pt-5 image-vido-wapper">
         <div class="d-flex align-items-center justify-content-center h-100 w-100  content">
             <div class="bg-white play-icon-box rounded-circle d-flex align-items-center justify-content-center">
                 <svg class="text-black ps-1" stroke="currentColor" fill="currentColor" stroke-width="0"
@@ -522,11 +522,11 @@
 
 
     <div class=" position-relative">
-        <img src="images/slider/about-img.png" class="position-absolute start-0  bc-img-1" alt="">
-        <img src="images/slider/h5-img-6.png" class="position-absolute start-0  bc-img-2" alt="">
-        <div class="container mx-auto mt-5 pt-4 ">
+        <img src="images/slider/about-img.png" class="position-absolute start-0 d-none d-lg-block bc-img-1" alt="">
+        <img src="images/slider/h5-img-6.png" class="position-absolute start-0 d-none d-lg-block  bc-img-2" alt="">
+        <div class="container-md mx-auto mt-5 pt-4 ">
             <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-12 col-lg-8">
                     <div class="supp-txt fw-800">
                         تعهد به
                         <span class="c-sec-color">
@@ -539,9 +539,9 @@
                         است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
                     </div>
                 </div>
-                <div class="col-8 mt-5">
+                <div class="col-12 col-lg-8 mt-5">
                     <div class="row">
-                        <div class="col-6 mt-4">
+                        <div class="col-12 col-lg-6 mt-4">
                             <div class="p-5 border br-20 bg-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"
                                     fill="none">
@@ -584,7 +584,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 mt-4">
+                        <div class="col-12 col-lg-6 mt-4">
                             <div class="p-5 border br-20  bg-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"
                                     fill="none">
@@ -627,7 +627,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 mt-4">
+                        <div class="col-12 col-lg-6 mt-4">
                             <div class="p-5 border br-20 bg-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"
                                     fill="none">
@@ -657,7 +657,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 mt-4 ">
+                        <div class="col-12 col-lg-6 mt-4 ">
                             <div class="p-5 border br-20 bg-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"
                                     fill="none">
@@ -731,19 +731,12 @@
 
     </div>
 
-
-
-
     <div class="max-width-container mx-auto my-5 py-lg-5">
         <div class=" border-line mt-4"></div>
     </div>
 
 
-
-
-
-
-    <div class="max-width-container mx-auto my-5 py-lg-5">
+    <div class="max-width-blog-container mx-auto my-5 py-lg-5">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
                 <div class="supp-txt fw-800">
@@ -759,7 +752,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row mt-4">
             <!-- ساختار Swiper -->
             <div class="swiper teamSwiper">
                 <div class="swiper-wrapper">
@@ -855,10 +848,7 @@
         </div>
     </div>
 
-
-
-
-    <div class="container-fluid my-5 py-5 position-relative" dir="ltr">
+    <div class="container-fluid my-5 py-lg-5 position-relative" dir="ltr">
         <div class="position-absolute cnuetya">
             <button class="follow-us-ins bg-white">
                 اینستاگرام ما را دنبال کنید
@@ -919,13 +909,6 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
     <div class="">
         <!-- parts -->
         <div class="max-width-container mx-auto mt-5 pt-5 px-3 px-lg-0">
@@ -977,10 +960,6 @@
             </div>
         </div>
     </div>
-
-
-
-
 
     <!-- footer -->
     <div class="pt-5"></div>
