--- a/home-1.html
+++ b/home-1.html
@@ -3493,6 +3493,68 @@
     </div>
 
 
+    <!-- subtitle large -->
+    <div class="container-fluid my-5 py-lg-5 position-relative" dir="ltr">
+        <div class="position-absolute cnuetya">
+            <button class="follow-us-ins bg-white">
+                اینستاگرام ما را دنبال کنید
+            </button>
+        </div>
+        <div class="ticker rottxt">
+            <div class="ticker__wrap">
+                <div class="ticker__item">
+
+                    <span class="fw-800 sub-font-s me-1 empty-font">
+                        هدیه رایگان وقتی بالای ۱۵۰ دلار خرج می‌کنید
+
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+
+                </div>
+                <div class="ticker__item">
+                    <span class="fw-800 sub-font-s me-1">رایگان برای حمل و نقل بالای 100 هزار تومان
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+
+                </div>
+                <div class="ticker__item">
+                    <span class="fw-800 sub-font-s me-1 empty-font">تضمین امنیت پرداخت با ما
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+
+                </div>
+
+                <!-- تکرار دوباره برای لوپ بی‌وقفه -->
+                <div class="ticker__item">
+
+                    <span class="fw-800 sub-font-s me-1">
+                        هدیه رایگان وقتی بالای ۱۵۰ دلار خرج می‌کنید
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+                </div>
+                <div class="ticker__item">
+                    <span class="fw-800 sub-font-s me-1 empty-font">رایگان برای حمل و نقل بالای 100 هزار تومان
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+
+
+                </div>
+                <div class="ticker__item">
+                    <span class="fw-800 sub-font-s me-1">تضمین امنیت پرداخت با ما
+                        <img src="images/stt.svg" class="mx-5" alt="">
+                    </span>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <!-- parts -->
     <div class="max-width-container mx-auto mt-5 pt-5 px-3 px-lg-0">
         <div class="swiper gallery_s">
@@ -3545,7 +3607,7 @@
 
     <!-- footer -->
     <div class="pt-5"></div>
-   
+
     <footer class="footer py-5 mt-5 px-3">
         <div class="max-width-container mx-auto">
             <div class="logo-box d-lg-none">
