make cart page responsive

--- a/cart-full.html
+++ b/cart-full.html
@@ -435,8 +435,100 @@
 
     <div class="max-width-blog-container mx-auto mt-5">
         <div class="row">
-            <div class="col-8">
-                <div class="table-responsive ">
+
+            <div class="col-12 d-md-none">
+                <div class="row">
+                    <div class="col-2">
+                        <img src="images/products/product_18_1.jpg" class="w-100" alt="">
+                    </div>
+                    <div class="col-10">
+                        <div class="fs14 pb-3 border-bottom fw-600">
+                            مولتی ویتامین دنزور دنز-ویتا - 28 گرم، شکلاتی
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3 border-bottom">
+                            <div>
+                                قیمت:
+                            </div>
+                            <div>
+
+                                520 تومان
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3 border-bottom">
+                            <div>
+                                تعداد:
+                            </div>
+                            <div>
+
+                                <div class="quantity-box d-flex align-items-center justify-content-around">
+                                    <div class="cursor-pointer">-</div>
+                                    <div>1</div>
+                                    <div class="cursor-pointer">+</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3">
+                            <div>
+                                جمع کل:
+                            </div>
+                            <div class="fw-700 fs17">
+
+                                520تومان
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom py-4">
+                    <div class="col-2">
+                        <img src="images/products/product_18_1.jpg" class="w-100" alt="">
+                    </div>
+                    <div class="col-10">
+                        <div class="fs14 pb-3 border-bottom fw-600">
+                            مولتی ویتامین دنزور دنز-ویتا - 28 گرم، شکلاتی
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3 border-bottom">
+                            <div>
+                                قیمت:
+                            </div>
+                            <div>
+
+                                520 تومان
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3 border-bottom">
+                            <div>
+                                تعداد:
+                            </div>
+                            <div>
+
+                                <div class="quantity-box d-flex align-items-center justify-content-around">
+                                    <div class="cursor-pointer">-</div>
+                                    <div>1</div>
+                                    <div class="cursor-pointer">+</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between fs14 fw-600 py-3">
+                            <div>
+                                جمع کل:
+                            </div>
+                            <div class="fw-700 fs17">
+
+                                520تومان
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="w-100 mt-4 cat-btn">آپدیت سبد خرید</button>
+
+            </div>
+
+
+            <div class="col-12 col-xl-8">
+
+
+                <div class="table-responsive d-none d-md-block">
                     <table class="table align-middle">
                         <thead class="">
                             <tr class="border-bottom">
@@ -529,21 +621,21 @@
                 </div>
 
                 <div class="row mt-3">
-                    <div class="col-7">
-                        <div class="d-flex">
-                            <input type="text" class="base-inp px-3" placeholder="کد تخفیف" name="" id="">
-                            <button class="px-5 cat-btn me-3">اعمال کد</button>
+                    <div class="col-12 col-md-7">
+                        <div class="d-md-flex">
+                            <input type="text" class="base-inp px-3 cat-btn" placeholder="کد تخفیف" name="" id="">
+                            <button class="px-5 cat-btn me-md-3  mt-3 mt-md-0">اعمال کد</button>
                         </div>
                     </div>
-                    <div class="col-5">
-                        <button class="px-5 cat-btn me-3">آپدیت سبد خرید</button>
+                    <div class="col-10 col-md-4">
+                        <button class="px-5 cat-btn me-3 d-none d-md-block">آپدیت سبد خرید</button>
                     </div>
                 </div>
 
 
             </div>
-            <div class="col-4">
-                <div class="card-c-left br-20 p-4">
+            <div class="col-12 col-xl-4 mt-5 mt-xl-0">
+                <div class="card-c-left br-20 px-4 py-5">
                     <div class="fw-800 fs20">
                         مجموع سبد خرید
                     </div>
@@ -565,15 +657,13 @@
                         </div>
                     </div>
 
-                    <button class="w-100 checkout-btn mt-4 fw-600">
+                    <button class="w-100 checkout-btn mt-5 fw-600">
                         تسویه حساب
                     </button>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <div class="max-width-blog-container mx-auto pt-5 mt-5">
         <div class="text-center texsize fw-800">
@@ -647,7 +737,7 @@
                     </div>
                 </div>
             </div>
-             <div class="col-3">
+            <div class="col-3">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
@@ -713,7 +803,7 @@
                     </div>
                 </div>
             </div>
-             <div class="col-3">
+            <div class="col-3">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
@@ -779,7 +869,7 @@
                     </div>
                 </div>
             </div>
-             <div class="col-3">
+            <div class="col-3">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
